2011-12-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult_intrinsics.txt: Updated with new intrinsics create_barge_object and
	  and in_usecode_path. Also documented optional parameters to the following
	  intrinsics: path_run_usecode, move_object, recall_virtue_stone and
	  teleport_to_saved_pos.
	* usecode/intrinsics.cc, usecode/bgintrinsics.h, usecode/siintrinsics.h,
	  ucinternal.h: Added create_barge_object and in_usecode_path intrinsics.
	  Added a new and optional parameter to path_run_usecode that can toggle SI
	  mode (defaults to true in SI, false otherwise).
	* objs/barge.cc: Force a barge to reset its center as well as to gather its
	  objects when it is being moved into the game world. Also, force a reset of
	  the barge's center when moving it. Fixed long-standing bug (at least 10
	  years old) that allowed a flying carpet to land on water.
	* imagewin/imagewin.cc: Initialization order (removing warning).
	* mapedit/shapeedit.cc: Fixed insertion bugs on vector data, as well as
	  allocation with new/dealocation with gtk_tree_iter_free.
	* objs/chunks.cc: Invalid world-wrapping caused assertions to fail at the
	  edges of the world.
	* all others: Replaced pre-processor hackery for Game_Object::find_nearby*
	  with templates and added a few more overloads.

2011-12-01 Dominik Reichardt <dominus@users.sourceforge.net>
	* gamewin.*, gumps/misc_options.*: applied patch by i30817 (forum) for
	  dropping stacks of items without confirmation of amount (CTRL drop) 
	  and option to make this the default way to drop stacks.
	* documentation and FAQ updated
	
2011-11-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* imagewin/scale_hq4x.cc & .h and various other files: added hq4x scaler.
	* imagewin/scale_hq2x.cc & .h, scale_hq3x.cc: streamlined scale_hqnx.h include
	
2011-10-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed uninitialized variable restored_schedule. Fixed two cases
	  of '!rand()%XX'.